welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: not found: value getPosX
      if (getPosX()==0){
          ^