welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var cpt=0
  while (cpt<=48){
    for (i<-0 to 6){
      if (getPosX()==0){
        for (j<-0 to 6){
          setPos(j,i)
          ecritMessage(cpt)
    			cpt=cpt+1
        }
      }else{
        for (j<-6 to 0){
          setPos(j,i)
          ecritMessage(cpt)
    			cpt=cpt+1
      	}
    	}
  	}
	}
}